--- a/js/README
+++ b/js/README
@@ -1,66 +1,9 @@
-<script>
-  var button = document.querySelector(".order-question-button");
-  var popup = document.querySelector(".form-container");
-  var form = popup.querySelector("form");
-  var date = form.querySelector("[name=date]");
-  var departure = form.querySelector("[name=departure-date]");
-  var adults = form.querySelector("[name=adults]");
-  var child = form.querySelector("[name=child]");
-  var isStorageSupport = true;
-  var storage = "";
+Папка для скриптов.
 
-  try {
-  storage = localStorage.getItem("adults");
-} catch (err) {
-  isStorageSupport = false;
-}
+--
 
-  try {
-  storage = localStorage.getItem("child");
-} catch (err) {
-  isStorageSupport = false;
-}
+Пример структуры файлов:
 
-  button.addEventListener("click", function (evt) {
-  popup.classList.add("form-show");
-  if (storage) {
-     date.focus();
-   } else {
-     departure.focus();
-/*Не поняла, как делать дальнейшие фокусы на поля ввода*/
-  if (storage) {
-      child.value = storage;
-    }
-  if (storage) {
-    adults.value = storage;
-    password.focus();
-  } else {
-    child.focus();
-    }
- }) ;
-
- form.addEventListener("submit", function (evt) {
-   if (!date.value && !adults.value && !child.value) {
-     evt.preventDefault();
-     popup.classList.remove("form-error");
-     popup.offsetWidth = popup.offsetWidth;
-     popup.classList.add("form-error");
-     console.log("Нужно ввести даты заезда");
-   } else {
-      if (isStorageSupport) {
-     localStorage.setItem("adults", adults.value);
-     localStorage.setItem("child", child.value);
-      }
-   }
- });
-
-  window.addEventListener("keydown", function (evt) {
-  if (evt.keyCode === 27) {
-    evt.preventDefault();
-  if (popup.classList.add("form-show")); {
-      popup.classList.remove("form-show");
-      popup.classList.remove("form-error");
-    }
-  }
-});
-</script>
+js/
+| - script.js
+| - [другие *.js файлы]
